--- a/templates/applications/identity.yaml
+++ b/templates/applications/identity.yaml
@@ -108,6 +108,10 @@ spec:
       {{- if .Values.connections.hostAliases }}
       hostAliases: {{- toYaml .Values.connections.hostAliases | nindent 8 }}
       {{- end }}
+      {{- with .Values.initContainers.custom }}
+      initContainers:
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       containers:
       - name: identity-authorization
         image: {{ include "docspace.imageRepository" (list . .Values.identity.authorization.image.repository) }}:{{ default .Values.images.tag .Values.identity.authorization.image.tag }}
