--- a/templates/applications/files-services.yaml
+++ b/templates/applications/files-services.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.filesServices.autoscaling.enabled }}
-  replicas: {{ .Values.filesServices.replicaCount }}
+  replicas: {{ include "docspace.replicas" (list . .Values.filesServices.replicaCount) }}
   {{- end }}
   selector:
     matchLabels:
