--- a/templates/applications/login.yaml
+++ b/templates/applications/login.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.login.autoscaling.enabled }}
-  replicas: {{ .Values.login.replicaCount }}
+  replicas: {{ include "docspace.replicas" (list . .Values.login.replicaCount) }}
   {{- end }}
   selector:
     matchLabels:
