--- a/templates/applications/proxy-frontend.yaml
+++ b/templates/applications/proxy-frontend.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.proxyFrontend.autoscaling.enabled }}
-  replicas: {{ .Values.proxyFrontend.replicaCount }}
+  replicas: {{ include "docspace.replicas" (list . .Values.proxyFrontend.replicaCount) }}
   {{- end }}
   selector:
     matchLabels:
