--- a/templates/applications/router.yaml
+++ b/templates/applications/router.yaml
@@ -15,7 +15,7 @@ metadata:
   {{- end }}
 spec:
   {{- if not .Values.router.autoscaling.enabled }}
-  replicas: {{ .Values.router.replicaCount }}
+  replicas: {{ include "docspace.replicas" (list . .Values.router.replicaCount) }}
   {{- end }}
   selector:
     matchLabels:
