Add newsletters with domain for singleportal setups
Co-authored-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com>
Co-committed-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com>

--- a/templates/configmaps/docspace.yaml
+++ b/templates/configmaps/docspace.yaml
@@ -20,6 +20,9 @@ data:
   {{- if .Values.connections.apiHostInternalRequests }}
   API_HOST: "http://{{ template "docspace.svc.router.name" . }}:{{ .Values.router.service.port.external }}"
   {{- end }}
+  {{- if .Values.singlePortalDomain.job.enabled }}
+  APP_CORE_SERVER_ROOT: {{ include "docspace.singlePortalDomain.appCoreServerRoot" . | trim | quote }}
+  {{- end }}
   MYSQL_HOST: {{ .Values.connections.mysqlHost }}
   MYSQL_PORT: {{ .Values.connections.mysqlPort | quote }}
   MYSQL_DATABASE: {{ .Values.connections.mysqlDatabase }}
